--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,23 +1,25 @@
 name: 'Terraform'
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  workflow_dispatch
   
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
     - uses: actions/checkout@v3
-    - uses: hashicorp/setup-terraform@v1
 
+  
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-      with:
-        # terraform_version: 0.13.0
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      
 
     - name: Terraform fmt
       id: fmt
